--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ body {
   place-items: center;
 }
 main {
-  background: url(images/background.svg);
-  width: 375px;
-  height: 812px;
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  height: 100vh;
+  min-height: 812px;
   color: var(--grey);
 }
 .container {
